# egdo-todo-cli

./: AGENT.md  README.md  egdo_v1_plan.md  publish_roadmap.md  pyproject.toml  requirements.txt  todo.md
docs/: command-reference.md
src/egdo/: cli.py  config.py  dates.py  handlers.py  markdown_store.py  render.py  store.py
tests/: test_cli.py  test_config.py  test_store.py
